# web-ext-native-message

./: Cargo.toml  README.md  package-lock.json  package.json  test.js
.github/workflows/: release.yml
src/: main.rs
