[package]
name = "google-translate-bridge"
version = "0.1.0"
authors = ["王先硚 <709922234@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.2"
serde_json = "1.0.40"
serde = { version = "1.0.97", features = ["derive"] }